// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`large left view should render correctly 1`] = `
<DocumentFragment>
  <div
    class="bpk-price"
  >
    <div
      class=""
    />
    <div
      class=""
    >
      <span
        class="bpk-price__price bpk-price__spacing"
      >
        <span
          class="bpk-text bpk-text--xxl"
        >
          £1,830
        </span>
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`large left view should support custom class names 1`] = `
<DocumentFragment>
  <div
    class="bpk-price custom-classname"
  >
    <div
      class=""
    />
    <div
      class=""
    >
      <span
        class="bpk-price__price bpk-price__spacing"
      >
        <span
          class="bpk-text bpk-text--xxl"
        >
          £1,830
        </span>
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`large left view should support custom leading class names 1`] = `
<DocumentFragment>
  <div
    class="bpk-price"
  >
    <div
      class="leading-classname"
    />
    <div
      class=""
    >
      <span
        class="bpk-price__price bpk-price__spacing"
      >
        <span
          class="bpk-text bpk-text--xxl"
        >
          £1,830
        </span>
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`large left view should support leading text attribute 1`] = `
<DocumentFragment>
  <div
    class="bpk-price"
  >
    <div
      class=""
    >
      <span
        class="bpk-text bpk-text--sm"
      >
        from
      </span>
    </div>
    <div
      class=""
    >
      <span
        class="bpk-price__price bpk-price__spacing"
      >
        <span
          class="bpk-text bpk-text--xxl"
        >
          £1,830
        </span>
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`large left view should support previous price attribute 1`] = `
<DocumentFragment>
  <div
    class="bpk-price"
  >
    <div
      class="bpk-price__leading"
    >
      <span
        class="bpk-price__previous-price"
      >
        <span
          class="bpk-text bpk-text--sm"
        >
          £2,000
        </span>
      </span>
    </div>
    <div
      class=""
    >
      <span
        class="bpk-price__price bpk-price__spacing"
      >
        <span
          class="bpk-text bpk-text--xxl"
        >
          £1,830
        </span>
      </span>
      <span
        class="bpk-price__trailing"
      >
        <span
          class="bpk-text bpk-text--sm"
        >
          per day
        </span>
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`large left view should support previous price with leading text and icon attribute 1`] = `
<DocumentFragment>
  <div
    class="bpk-price"
  >
    <div
      class="bpk-price__leading"
    >
      <span
        class="bpk-price__previous-price"
      >
        <span
          class="bpk-text bpk-text--sm"
        >
          £2,000
        </span>
      </span>
      <span
        class="bpk-price__separator"
      >
        <span
          class="bpk-text bpk-text--sm"
        >
          𐤟
        </span>
      </span>
      <span
        class="bpk-text bpk-text--sm"
      >
        from
      </span>
    </div>
    <div
      class=""
    >
      <span
        class="bpk-price__price bpk-price__spacing"
      >
        <span
          class="bpk-text bpk-text--xxl"
        >
          £1,830
        </span>
      </span>
      <span
        class="bpk-price__icon bpk-price__spacing"
      />
      <span
        class="bpk-price__trailing"
      >
        <span
          class="bpk-text bpk-text--sm"
        >
          per day
        </span>
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`large left view should support previous price with leading text attribute 1`] = `
<DocumentFragment>
  <div
    class="bpk-price"
  >
    <div
      class="bpk-price__leading"
    >
      <span
        class="bpk-price__previous-price"
      >
        <span
          class="bpk-text bpk-text--sm"
        >
          £2,000
        </span>
      </span>
      <span
        class="bpk-price__separator"
      >
        <span
          class="bpk-text bpk-text--sm"
        >
          𐤟
        </span>
      </span>
      <span
        class="bpk-text bpk-text--sm"
      >
        from
      </span>
    </div>
    <div
      class=""
    >
      <span
        class="bpk-price__price bpk-price__spacing"
      >
        <span
          class="bpk-text bpk-text--xxl"
        >
          £1,830
        </span>
      </span>
      <span
        class="bpk-price__trailing"
      >
        <span
          class="bpk-text bpk-text--sm"
        >
          per day
        </span>
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`large left view should support trailing text attribute 1`] = `
<DocumentFragment>
  <div
    class="bpk-price"
  >
    <div
      class=""
    />
    <div
      class=""
    >
      <span
        class="bpk-price__price bpk-price__spacing"
      >
        <span
          class="bpk-text bpk-text--xxl"
        >
          £1,830
        </span>
      </span>
      <span
        class="bpk-price__trailing"
      >
        <span
          class="bpk-text bpk-text--sm"
        >
          per day
        </span>
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`large right view should render correctly 1`] = `
<DocumentFragment>
  <div
    class="bpk-price bpk-price--right"
  >
    <div
      class="bpk-price__leading--right"
    />
    <div
      class="bpk-price__main--right"
    >
      <span
        class="bpk-price__price"
      >
        <span
          class="bpk-text bpk-text--xxl"
        >
          £1,830
        </span>
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`large right view should support custom class names 1`] = `
<DocumentFragment>
  <div
    class="bpk-price bpk-price--right custom-classname"
  >
    <div
      class="bpk-price__leading--right"
    />
    <div
      class="bpk-price__main--right"
    >
      <span
        class="bpk-price__price"
      >
        <span
          class="bpk-text bpk-text--xxl"
        >
          £1,830
        </span>
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`large right view should support custom leading class names 1`] = `
<DocumentFragment>
  <div
    class="bpk-price bpk-price--right"
  >
    <div
      class="bpk-price__leading--right leading-classname"
    />
    <div
      class="bpk-price__main--right"
    >
      <span
        class="bpk-price__price"
      >
        <span
          class="bpk-text bpk-text--xxl"
        >
          £1,830
        </span>
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`large right view should support leading text attribute 1`] = `
<DocumentFragment>
  <div
    class="bpk-price bpk-price--right"
  >
    <div
      class="bpk-price__leading--right"
    >
      <span
        class="bpk-text bpk-text--sm"
      >
        from
      </span>
    </div>
    <div
      class="bpk-price__main--right"
    >
      <span
        class="bpk-price__price"
      >
        <span
          class="bpk-text bpk-text--xxl"
        >
          £1,830
        </span>
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`large right view should support previous price attribute 1`] = `
<DocumentFragment>
  <div
    class="bpk-price bpk-price--right"
  >
    <div
      class="bpk-price__leading bpk-price__leading--right"
    >
      <span
        class="bpk-price__previous-price"
      >
        <span
          class="bpk-text bpk-text--sm"
        >
          £2,000
        </span>
      </span>
    </div>
    <div
      class="bpk-price__main--right"
    >
      <span
        class="bpk-price__price"
      >
        <span
          class="bpk-text bpk-text--xxl"
        >
          £1,830
        </span>
      </span>
    </div>
    <div
      class="bpk-price__trailing"
    >
      <span
        class="bpk-text bpk-text--sm"
      >
        per day
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`large right view should support previous price with leading text and icon attribute 1`] = `
<DocumentFragment>
  <div
    class="bpk-price bpk-price--right"
  >
    <div
      class="bpk-price__leading bpk-price__leading--right"
    >
      <span
        class="bpk-price__previous-price"
      >
        <span
          class="bpk-text bpk-text--sm"
        >
          £2,000
        </span>
      </span>
      <span
        class="bpk-price__separator"
      >
        <span
          class="bpk-text bpk-text--sm"
        >
          𐤟
        </span>
      </span>
      <span
        class="bpk-text bpk-text--sm"
      >
        from
      </span>
    </div>
    <div
      class="bpk-price__main--right"
    >
      <span
        class="bpk-price__price"
      >
        <span
          class="bpk-text bpk-text--xxl"
        >
          £1,830
        </span>
      </span>
      <span
        class="bpk-price__icon"
      />
    </div>
    <div
      class="bpk-price__trailing"
    >
      <span
        class="bpk-text bpk-text--sm"
      >
        per day
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`large right view should support previous price with leading text attribute 1`] = `
<DocumentFragment>
  <div
    class="bpk-price bpk-price--right"
  >
    <div
      class="bpk-price__leading bpk-price__leading--right"
    >
      <span
        class="bpk-price__previous-price"
      >
        <span
          class="bpk-text bpk-text--sm"
        >
          £2,000
        </span>
      </span>
      <span
        class="bpk-price__separator"
      >
        <span
          class="bpk-text bpk-text--sm"
        >
          𐤟
        </span>
      </span>
      <span
        class="bpk-text bpk-text--sm"
      >
        from
      </span>
    </div>
    <div
      class="bpk-price__main--right"
    >
      <span
        class="bpk-price__price"
      >
        <span
          class="bpk-text bpk-text--xxl"
        >
          £1,830
        </span>
      </span>
    </div>
    <div
      class="bpk-price__trailing"
    >
      <span
        class="bpk-text bpk-text--sm"
      >
        per day
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`large right view should support trailing text attribute 1`] = `
<DocumentFragment>
  <div
    class="bpk-price bpk-price--right"
  >
    <div
      class="bpk-price__leading--right"
    />
    <div
      class="bpk-price__main--right"
    >
      <span
        class="bpk-price__price"
      >
        <span
          class="bpk-text bpk-text--xxl"
        >
          £1,830
        </span>
      </span>
    </div>
    <div
      class="bpk-price__trailing"
    >
      <span
        class="bpk-text bpk-text--sm"
      >
        per day
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`medium left view should render correctly 1`] = `
<DocumentFragment>
  <div
    class="bpk-price"
  >
    <div
      class=""
    />
    <div
      class=""
    >
      <span
        class="bpk-price__price bpk-price__spacing"
      >
        <span
          class="bpk-text bpk-text--heading-3"
        >
          £1,830
        </span>
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`medium left view should support custom class names 1`] = `
<DocumentFragment>
  <div
    class="bpk-price custom-classname"
  >
    <div
      class=""
    />
    <div
      class=""
    >
      <span
        class="bpk-price__price bpk-price__spacing"
      >
        <span
          class="bpk-text bpk-text--heading-3"
        >
          £1,830
        </span>
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`medium left view should support custom leading class names 1`] = `
<DocumentFragment>
  <div
    class="bpk-price"
  >
    <div
      class="leading-classname"
    />
    <div
      class=""
    >
      <span
        class="bpk-price__price bpk-price__spacing"
      >
        <span
          class="bpk-text bpk-text--heading-3"
        >
          £1,830
        </span>
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`medium left view should support leading text attribute 1`] = `
<DocumentFragment>
  <div
    class="bpk-price"
  >
    <div
      class=""
    >
      <span
        class="bpk-text bpk-text--xs"
      >
        from
      </span>
    </div>
    <div
      class=""
    >
      <span
        class="bpk-price__price bpk-price__spacing"
      >
        <span
          class="bpk-text bpk-text--heading-3"
        >
          £1,830
        </span>
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`medium left view should support previous price attribute 1`] = `
<DocumentFragment>
  <div
    class="bpk-price"
  >
    <div
      class="bpk-price__leading"
    >
      <span
        class="bpk-price__previous-price"
      >
        <span
          class="bpk-text bpk-text--xs"
        >
          £2,000
        </span>
      </span>
    </div>
    <div
      class=""
    >
      <span
        class="bpk-price__price bpk-price__spacing"
      >
        <span
          class="bpk-text bpk-text--heading-3"
        >
          £1,830
        </span>
      </span>
      <span
        class="bpk-price__trailing"
      >
        <span
          class="bpk-text bpk-text--xs"
        >
          per day
        </span>
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`medium left view should support previous price with leading text and icon attribute 1`] = `
<DocumentFragment>
  <div
    class="bpk-price"
  >
    <div
      class="bpk-price__leading"
    >
      <span
        class="bpk-price__previous-price"
      >
        <span
          class="bpk-text bpk-text--xs"
        >
          £2,000
        </span>
      </span>
      <span
        class="bpk-price__separator"
      >
        <span
          class="bpk-text bpk-text--xs"
        >
          𐤟
        </span>
      </span>
      <span
        class="bpk-text bpk-text--xs"
      >
        from
      </span>
    </div>
    <div
      class=""
    >
      <span
        class="bpk-price__price bpk-price__spacing"
      >
        <span
          class="bpk-text bpk-text--heading-3"
        >
          £1,830
        </span>
      </span>
      <span
        class="bpk-price__icon bpk-price__spacing"
      />
      <span
        class="bpk-price__trailing"
      >
        <span
          class="bpk-text bpk-text--xs"
        >
          per day
        </span>
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`medium left view should support previous price with leading text attribute 1`] = `
<DocumentFragment>
  <div
    class="bpk-price"
  >
    <div
      class="bpk-price__leading"
    >
      <span
        class="bpk-price__previous-price"
      >
        <span
          class="bpk-text bpk-text--xs"
        >
          £2,000
        </span>
      </span>
      <span
        class="bpk-price__separator"
      >
        <span
          class="bpk-text bpk-text--xs"
        >
          𐤟
        </span>
      </span>
      <span
        class="bpk-text bpk-text--xs"
      >
        from
      </span>
    </div>
    <div
      class=""
    >
      <span
        class="bpk-price__price bpk-price__spacing"
      >
        <span
          class="bpk-text bpk-text--heading-3"
        >
          £1,830
        </span>
      </span>
      <span
        class="bpk-price__trailing"
      >
        <span
          class="bpk-text bpk-text--xs"
        >
          per day
        </span>
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`medium left view should support trailing text attribute 1`] = `
<DocumentFragment>
  <div
    class="bpk-price"
  >
    <div
      class=""
    />
    <div
      class=""
    >
      <span
        class="bpk-price__price bpk-price__spacing"
      >
        <span
          class="bpk-text bpk-text--heading-3"
        >
          £1,830
        </span>
      </span>
      <span
        class="bpk-price__trailing"
      >
        <span
          class="bpk-text bpk-text--xs"
        >
          per day
        </span>
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`medium right view should render correctly 1`] = `
<DocumentFragment>
  <div
    class="bpk-price bpk-price--right"
  >
    <div
      class="bpk-price__leading--right"
    />
    <div
      class="bpk-price__main--right"
    >
      <span
        class="bpk-price__price"
      >
        <span
          class="bpk-text bpk-text--heading-3"
        >
          £1,830
        </span>
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`medium right view should support custom class names 1`] = `
<DocumentFragment>
  <div
    class="bpk-price bpk-price--right custom-classname"
  >
    <div
      class="bpk-price__leading--right"
    />
    <div
      class="bpk-price__main--right"
    >
      <span
        class="bpk-price__price"
      >
        <span
          class="bpk-text bpk-text--heading-3"
        >
          £1,830
        </span>
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`medium right view should support custom leading class names 1`] = `
<DocumentFragment>
  <div
    class="bpk-price bpk-price--right"
  >
    <div
      class="bpk-price__leading--right leading-classname"
    />
    <div
      class="bpk-price__main--right"
    >
      <span
        class="bpk-price__price"
      >
        <span
          class="bpk-text bpk-text--heading-3"
        >
          £1,830
        </span>
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`medium right view should support leading text attribute 1`] = `
<DocumentFragment>
  <div
    class="bpk-price bpk-price--right"
  >
    <div
      class="bpk-price__leading--right"
    >
      <span
        class="bpk-text bpk-text--xs"
      >
        from
      </span>
    </div>
    <div
      class="bpk-price__main--right"
    >
      <span
        class="bpk-price__price"
      >
        <span
          class="bpk-text bpk-text--heading-3"
        >
          £1,830
        </span>
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`medium right view should support previous price attribute 1`] = `
<DocumentFragment>
  <div
    class="bpk-price bpk-price--right"
  >
    <div
      class="bpk-price__leading bpk-price__leading--right"
    >
      <span
        class="bpk-price__previous-price"
      >
        <span
          class="bpk-text bpk-text--xs"
        >
          £2,000
        </span>
      </span>
    </div>
    <div
      class="bpk-price__main--right"
    >
      <span
        class="bpk-price__price"
      >
        <span
          class="bpk-text bpk-text--heading-3"
        >
          £1,830
        </span>
      </span>
    </div>
    <div
      class="bpk-price__trailing"
    >
      <span
        class="bpk-text bpk-text--xs"
      >
        per day
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`medium right view should support previous price with leading text and icon attribute 1`] = `
<DocumentFragment>
  <div
    class="bpk-price bpk-price--right"
  >
    <div
      class="bpk-price__leading bpk-price__leading--right"
    >
      <span
        class="bpk-price__previous-price"
      >
        <span
          class="bpk-text bpk-text--xs"
        >
          £2,000
        </span>
      </span>
      <span
        class="bpk-price__separator"
      >
        <span
          class="bpk-text bpk-text--xs"
        >
          𐤟
        </span>
      </span>
      <span
        class="bpk-text bpk-text--xs"
      >
        from
      </span>
    </div>
    <div
      class="bpk-price__main--right"
    >
      <span
        class="bpk-price__price"
      >
        <span
          class="bpk-text bpk-text--heading-3"
        >
          £1,830
        </span>
      </span>
      <span
        class="bpk-price__icon"
      />
    </div>
    <div
      class="bpk-price__trailing"
    >
      <span
        class="bpk-text bpk-text--xs"
      >
        per day
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`medium right view should support previous price with leading text attribute 1`] = `
<DocumentFragment>
  <div
    class="bpk-price bpk-price--right"
  >
    <div
      class="bpk-price__leading bpk-price__leading--right"
    >
      <span
        class="bpk-price__previous-price"
      >
        <span
          class="bpk-text bpk-text--xs"
        >
          £2,000
        </span>
      </span>
      <span
        class="bpk-price__separator"
      >
        <span
          class="bpk-text bpk-text--xs"
        >
          𐤟
        </span>
      </span>
      <span
        class="bpk-text bpk-text--xs"
      >
        from
      </span>
    </div>
    <div
      class="bpk-price__main--right"
    >
      <span
        class="bpk-price__price"
      >
        <span
          class="bpk-text bpk-text--heading-3"
        >
          £1,830
        </span>
      </span>
    </div>
    <div
      class="bpk-price__trailing"
    >
      <span
        class="bpk-text bpk-text--xs"
      >
        per day
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`medium right view should support trailing text attribute 1`] = `
<DocumentFragment>
  <div
    class="bpk-price bpk-price--right"
  >
    <div
      class="bpk-price__leading--right"
    />
    <div
      class="bpk-price__main--right"
    >
      <span
        class="bpk-price__price"
      >
        <span
          class="bpk-text bpk-text--heading-3"
        >
          £1,830
        </span>
      </span>
    </div>
    <div
      class="bpk-price__trailing"
    >
      <span
        class="bpk-text bpk-text--xs"
      >
        per day
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`small left view should render correctly 1`] = `
<DocumentFragment>
  <div
    class="bpk-price"
  >
    <div
      class=""
    />
    <div
      class=""
    >
      <span
        class="bpk-price__price bpk-price__spacing"
      >
        <span
          class="bpk-text bpk-text--heading-4"
        >
          £1,830
        </span>
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`small left view should support custom class names 1`] = `
<DocumentFragment>
  <div
    class="bpk-price custom-classname"
  >
    <div
      class=""
    />
    <div
      class=""
    >
      <span
        class="bpk-price__price bpk-price__spacing"
      >
        <span
          class="bpk-text bpk-text--heading-4"
        >
          £1,830
        </span>
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`small left view should support custom leading class names 1`] = `
<DocumentFragment>
  <div
    class="bpk-price"
  >
    <div
      class="leading-classname"
    />
    <div
      class=""
    >
      <span
        class="bpk-price__price bpk-price__spacing"
      >
        <span
          class="bpk-text bpk-text--heading-4"
        >
          £1,830
        </span>
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`small left view should support leading text attribute 1`] = `
<DocumentFragment>
  <div
    class="bpk-price"
  >
    <div
      class=""
    >
      <span
        class="bpk-text bpk-text--xs"
      >
        from
      </span>
    </div>
    <div
      class=""
    >
      <span
        class="bpk-price__price bpk-price__spacing"
      >
        <span
          class="bpk-text bpk-text--heading-4"
        >
          £1,830
        </span>
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`small left view should support previous price attribute 1`] = `
<DocumentFragment>
  <div
    class="bpk-price"
  >
    <div
      class="bpk-price__leading"
    >
      <span
        class="bpk-price__previous-price"
      >
        <span
          class="bpk-text bpk-text--xs"
        >
          £2,000
        </span>
      </span>
    </div>
    <div
      class=""
    >
      <span
        class="bpk-price__price bpk-price__spacing"
      >
        <span
          class="bpk-text bpk-text--heading-4"
        >
          £1,830
        </span>
      </span>
      <span
        class="bpk-price__trailing"
      >
        <span
          class="bpk-text bpk-text--xs"
        >
          per day
        </span>
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`small left view should support previous price with leading text and icon attribute 1`] = `
<DocumentFragment>
  <div
    class="bpk-price"
  >
    <div
      class="bpk-price__leading"
    >
      <span
        class="bpk-price__previous-price"
      >
        <span
          class="bpk-text bpk-text--xs"
        >
          £2,000
        </span>
      </span>
      <span
        class="bpk-price__separator"
      >
        <span
          class="bpk-text bpk-text--xs"
        >
          𐤟
        </span>
      </span>
      <span
        class="bpk-text bpk-text--xs"
      >
        from
      </span>
    </div>
    <div
      class=""
    >
      <span
        class="bpk-price__price bpk-price__spacing"
      >
        <span
          class="bpk-text bpk-text--heading-4"
        >
          £1,830
        </span>
      </span>
      <span
        class="bpk-price__icon bpk-price__spacing"
      />
      <span
        class="bpk-price__trailing"
      >
        <span
          class="bpk-text bpk-text--xs"
        >
          per day
        </span>
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`small left view should support previous price with leading text attribute 1`] = `
<DocumentFragment>
  <div
    class="bpk-price"
  >
    <div
      class="bpk-price__leading"
    >
      <span
        class="bpk-price__previous-price"
      >
        <span
          class="bpk-text bpk-text--xs"
        >
          £2,000
        </span>
      </span>
      <span
        class="bpk-price__separator"
      >
        <span
          class="bpk-text bpk-text--xs"
        >
          𐤟
        </span>
      </span>
      <span
        class="bpk-text bpk-text--xs"
      >
        from
      </span>
    </div>
    <div
      class=""
    >
      <span
        class="bpk-price__price bpk-price__spacing"
      >
        <span
          class="bpk-text bpk-text--heading-4"
        >
          £1,830
        </span>
      </span>
      <span
        class="bpk-price__trailing"
      >
        <span
          class="bpk-text bpk-text--xs"
        >
          per day
        </span>
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`small left view should support trailing text attribute 1`] = `
<DocumentFragment>
  <div
    class="bpk-price"
  >
    <div
      class=""
    />
    <div
      class=""
    >
      <span
        class="bpk-price__price bpk-price__spacing"
      >
        <span
          class="bpk-text bpk-text--heading-4"
        >
          £1,830
        </span>
      </span>
      <span
        class="bpk-price__trailing"
      >
        <span
          class="bpk-text bpk-text--xs"
        >
          per day
        </span>
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`small right view should render correctly 1`] = `
<DocumentFragment>
  <div
    class="bpk-price bpk-price--right"
  >
    <div
      class="bpk-price__leading--right"
    />
    <div
      class="bpk-price__main--right"
    >
      <span
        class="bpk-price__price"
      >
        <span
          class="bpk-text bpk-text--heading-4"
        >
          £1,830
        </span>
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`small right view should support custom class names 1`] = `
<DocumentFragment>
  <div
    class="bpk-price bpk-price--right custom-classname"
  >
    <div
      class="bpk-price__leading--right"
    />
    <div
      class="bpk-price__main--right"
    >
      <span
        class="bpk-price__price"
      >
        <span
          class="bpk-text bpk-text--heading-4"
        >
          £1,830
        </span>
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`small right view should support custom leading class names 1`] = `
<DocumentFragment>
  <div
    class="bpk-price bpk-price--right"
  >
    <div
      class="bpk-price__leading--right leading-classname"
    />
    <div
      class="bpk-price__main--right"
    >
      <span
        class="bpk-price__price"
      >
        <span
          class="bpk-text bpk-text--heading-4"
        >
          £1,830
        </span>
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`small right view should support leading text attribute 1`] = `
<DocumentFragment>
  <div
    class="bpk-price bpk-price--right"
  >
    <div
      class="bpk-price__leading--right"
    >
      <span
        class="bpk-text bpk-text--xs"
      >
        from
      </span>
    </div>
    <div
      class="bpk-price__main--right"
    >
      <span
        class="bpk-price__price"
      >
        <span
          class="bpk-text bpk-text--heading-4"
        >
          £1,830
        </span>
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`small right view should support previous price attribute 1`] = `
<DocumentFragment>
  <div
    class="bpk-price bpk-price--right"
  >
    <div
      class="bpk-price__leading bpk-price__leading--right"
    >
      <span
        class="bpk-price__previous-price"
      >
        <span
          class="bpk-text bpk-text--xs"
        >
          £2,000
        </span>
      </span>
    </div>
    <div
      class="bpk-price__main--right"
    >
      <span
        class="bpk-price__price"
      >
        <span
          class="bpk-text bpk-text--heading-4"
        >
          £1,830
        </span>
      </span>
    </div>
    <div
      class="bpk-price__trailing"
    >
      <span
        class="bpk-text bpk-text--xs"
      >
        per day
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`small right view should support previous price with leading text and icon attribute 1`] = `
<DocumentFragment>
  <div
    class="bpk-price bpk-price--right"
  >
    <div
      class="bpk-price__leading bpk-price__leading--right"
    >
      <span
        class="bpk-price__previous-price"
      >
        <span
          class="bpk-text bpk-text--xs"
        >
          £2,000
        </span>
      </span>
      <span
        class="bpk-price__separator"
      >
        <span
          class="bpk-text bpk-text--xs"
        >
          𐤟
        </span>
      </span>
      <span
        class="bpk-text bpk-text--xs"
      >
        from
      </span>
    </div>
    <div
      class="bpk-price__main--right"
    >
      <span
        class="bpk-price__price"
      >
        <span
          class="bpk-text bpk-text--heading-4"
        >
          £1,830
        </span>
      </span>
      <span
        class="bpk-price__icon"
      />
    </div>
    <div
      class="bpk-price__trailing"
    >
      <span
        class="bpk-text bpk-text--xs"
      >
        per day
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`small right view should support previous price with leading text attribute 1`] = `
<DocumentFragment>
  <div
    class="bpk-price bpk-price--right"
  >
    <div
      class="bpk-price__leading bpk-price__leading--right"
    >
      <span
        class="bpk-price__previous-price"
      >
        <span
          class="bpk-text bpk-text--xs"
        >
          £2,000
        </span>
      </span>
      <span
        class="bpk-price__separator"
      >
        <span
          class="bpk-text bpk-text--xs"
        >
          𐤟
        </span>
      </span>
      <span
        class="bpk-text bpk-text--xs"
      >
        from
      </span>
    </div>
    <div
      class="bpk-price__main--right"
    >
      <span
        class="bpk-price__price"
      >
        <span
          class="bpk-text bpk-text--heading-4"
        >
          £1,830
        </span>
      </span>
    </div>
    <div
      class="bpk-price__trailing"
    >
      <span
        class="bpk-text bpk-text--xs"
      >
        per day
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`small right view should support trailing text attribute 1`] = `
<DocumentFragment>
  <div
    class="bpk-price bpk-price--right"
  >
    <div
      class="bpk-price__leading--right"
    />
    <div
      class="bpk-price__main--right"
    >
      <span
        class="bpk-price__price"
      >
        <span
          class="bpk-text bpk-text--heading-4"
        >
          £1,830
        </span>
      </span>
    </div>
    <div
      class="bpk-price__trailing"
    >
      <span
        class="bpk-text bpk-text--xs"
      >
        per day
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`xsmall left view should render correctly 1`] = `
<DocumentFragment>
  <div
    class="bpk-price"
  >
    <div
      class=""
    />
    <div
      class=""
    >
      <span
        class="bpk-price__price bpk-price__spacing"
      >
        <span
          class="bpk-text bpk-text--heading-5"
        >
          £1,830
        </span>
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`xsmall left view should support custom class names 1`] = `
<DocumentFragment>
  <div
    class="bpk-price custom-classname"
  >
    <div
      class=""
    />
    <div
      class=""
    >
      <span
        class="bpk-price__price bpk-price__spacing"
      >
        <span
          class="bpk-text bpk-text--heading-5"
        >
          £1,830
        </span>
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`xsmall left view should support custom leading class names 1`] = `
<DocumentFragment>
  <div
    class="bpk-price"
  >
    <div
      class="leading-classname"
    />
    <div
      class=""
    >
      <span
        class="bpk-price__price bpk-price__spacing"
      >
        <span
          class="bpk-text bpk-text--heading-5"
        >
          £1,830
        </span>
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`xsmall left view should support leading text attribute 1`] = `
<DocumentFragment>
  <div
    class="bpk-price"
  >
    <div
      class=""
    >
      <span
        class="bpk-text bpk-text--xs"
      >
        from
      </span>
    </div>
    <div
      class=""
    >
      <span
        class="bpk-price__price bpk-price__spacing"
      >
        <span
          class="bpk-text bpk-text--heading-5"
        >
          £1,830
        </span>
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`xsmall left view should support previous price attribute 1`] = `
<DocumentFragment>
  <div
    class="bpk-price"
  >
    <div
      class="bpk-price__leading"
    >
      <span
        class="bpk-price__previous-price"
      >
        <span
          class="bpk-text bpk-text--xs"
        >
          £2,000
        </span>
      </span>
    </div>
    <div
      class=""
    >
      <span
        class="bpk-price__price bpk-price__spacing"
      >
        <span
          class="bpk-text bpk-text--heading-5"
        >
          £1,830
        </span>
      </span>
      <span
        class="bpk-price__trailing"
      >
        <span
          class="bpk-text bpk-text--xs"
        >
          per day
        </span>
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`xsmall left view should support previous price with leading text and icon attribute 1`] = `
<DocumentFragment>
  <div
    class="bpk-price"
  >
    <div
      class="bpk-price__leading"
    >
      <span
        class="bpk-price__previous-price"
      >
        <span
          class="bpk-text bpk-text--xs"
        >
          £2,000
        </span>
      </span>
      <span
        class="bpk-price__separator"
      >
        <span
          class="bpk-text bpk-text--xs"
        >
          𐤟
        </span>
      </span>
      <span
        class="bpk-text bpk-text--xs"
      >
        from
      </span>
    </div>
    <div
      class=""
    >
      <span
        class="bpk-price__price bpk-price__spacing"
      >
        <span
          class="bpk-text bpk-text--heading-5"
        >
          £1,830
        </span>
      </span>
      <span
        class="bpk-price__icon bpk-price__spacing"
      />
      <span
        class="bpk-price__trailing"
      >
        <span
          class="bpk-text bpk-text--xs"
        >
          per day
        </span>
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`xsmall left view should support previous price with leading text attribute 1`] = `
<DocumentFragment>
  <div
    class="bpk-price"
  >
    <div
      class="bpk-price__leading"
    >
      <span
        class="bpk-price__previous-price"
      >
        <span
          class="bpk-text bpk-text--xs"
        >
          £2,000
        </span>
      </span>
      <span
        class="bpk-price__separator"
      >
        <span
          class="bpk-text bpk-text--xs"
        >
          𐤟
        </span>
      </span>
      <span
        class="bpk-text bpk-text--xs"
      >
        from
      </span>
    </div>
    <div
      class=""
    >
      <span
        class="bpk-price__price bpk-price__spacing"
      >
        <span
          class="bpk-text bpk-text--heading-5"
        >
          £1,830
        </span>
      </span>
      <span
        class="bpk-price__trailing"
      >
        <span
          class="bpk-text bpk-text--xs"
        >
          per day
        </span>
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`xsmall left view should support trailing text attribute 1`] = `
<DocumentFragment>
  <div
    class="bpk-price"
  >
    <div
      class=""
    />
    <div
      class=""
    >
      <span
        class="bpk-price__price bpk-price__spacing"
      >
        <span
          class="bpk-text bpk-text--heading-5"
        >
          £1,830
        </span>
      </span>
      <span
        class="bpk-price__trailing"
      >
        <span
          class="bpk-text bpk-text--xs"
        >
          per day
        </span>
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`xsmall right view should render correctly 1`] = `
<DocumentFragment>
  <div
    class="bpk-price bpk-price--right"
  >
    <div
      class="bpk-price__leading--right"
    />
    <div
      class="bpk-price__main--right"
    >
      <span
        class="bpk-price__price"
      >
        <span
          class="bpk-text bpk-text--heading-5"
        >
          £1,830
        </span>
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`xsmall right view should support custom class names 1`] = `
<DocumentFragment>
  <div
    class="bpk-price bpk-price--right custom-classname"
  >
    <div
      class="bpk-price__leading--right"
    />
    <div
      class="bpk-price__main--right"
    >
      <span
        class="bpk-price__price"
      >
        <span
          class="bpk-text bpk-text--heading-5"
        >
          £1,830
        </span>
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`xsmall right view should support custom leading class names 1`] = `
<DocumentFragment>
  <div
    class="bpk-price bpk-price--right"
  >
    <div
      class="bpk-price__leading--right leading-classname"
    />
    <div
      class="bpk-price__main--right"
    >
      <span
        class="bpk-price__price"
      >
        <span
          class="bpk-text bpk-text--heading-5"
        >
          £1,830
        </span>
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`xsmall right view should support leading text attribute 1`] = `
<DocumentFragment>
  <div
    class="bpk-price bpk-price--right"
  >
    <div
      class="bpk-price__leading--right"
    >
      <span
        class="bpk-text bpk-text--xs"
      >
        from
      </span>
    </div>
    <div
      class="bpk-price__main--right"
    >
      <span
        class="bpk-price__price"
      >
        <span
          class="bpk-text bpk-text--heading-5"
        >
          £1,830
        </span>
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`xsmall right view should support previous price attribute 1`] = `
<DocumentFragment>
  <div
    class="bpk-price bpk-price--right"
  >
    <div
      class="bpk-price__leading bpk-price__leading--right"
    >
      <span
        class="bpk-price__previous-price"
      >
        <span
          class="bpk-text bpk-text--xs"
        >
          £2,000
        </span>
      </span>
    </div>
    <div
      class="bpk-price__main--right"
    >
      <span
        class="bpk-price__price"
      >
        <span
          class="bpk-text bpk-text--heading-5"
        >
          £1,830
        </span>
      </span>
    </div>
    <div
      class="bpk-price__trailing"
    >
      <span
        class="bpk-text bpk-text--xs"
      >
        per day
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`xsmall right view should support previous price with leading text and icon attribute 1`] = `
<DocumentFragment>
  <div
    class="bpk-price bpk-price--right"
  >
    <div
      class="bpk-price__leading bpk-price__leading--right"
    >
      <span
        class="bpk-price__previous-price"
      >
        <span
          class="bpk-text bpk-text--xs"
        >
          £2,000
        </span>
      </span>
      <span
        class="bpk-price__separator"
      >
        <span
          class="bpk-text bpk-text--xs"
        >
          𐤟
        </span>
      </span>
      <span
        class="bpk-text bpk-text--xs"
      >
        from
      </span>
    </div>
    <div
      class="bpk-price__main--right"
    >
      <span
        class="bpk-price__price"
      >
        <span
          class="bpk-text bpk-text--heading-5"
        >
          £1,830
        </span>
      </span>
      <span
        class="bpk-price__icon"
      />
    </div>
    <div
      class="bpk-price__trailing"
    >
      <span
        class="bpk-text bpk-text--xs"
      >
        per day
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`xsmall right view should support previous price with leading text attribute 1`] = `
<DocumentFragment>
  <div
    class="bpk-price bpk-price--right"
  >
    <div
      class="bpk-price__leading bpk-price__leading--right"
    >
      <span
        class="bpk-price__previous-price"
      >
        <span
          class="bpk-text bpk-text--xs"
        >
          £2,000
        </span>
      </span>
      <span
        class="bpk-price__separator"
      >
        <span
          class="bpk-text bpk-text--xs"
        >
          𐤟
        </span>
      </span>
      <span
        class="bpk-text bpk-text--xs"
      >
        from
      </span>
    </div>
    <div
      class="bpk-price__main--right"
    >
      <span
        class="bpk-price__price"
      >
        <span
          class="bpk-text bpk-text--heading-5"
        >
          £1,830
        </span>
      </span>
    </div>
    <div
      class="bpk-price__trailing"
    >
      <span
        class="bpk-text bpk-text--xs"
      >
        per day
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`xsmall right view should support trailing text attribute 1`] = `
<DocumentFragment>
  <div
    class="bpk-price bpk-price--right"
  >
    <div
      class="bpk-price__leading--right"
    />
    <div
      class="bpk-price__main--right"
    >
      <span
        class="bpk-price__price"
      >
        <span
          class="bpk-text bpk-text--heading-5"
        >
          £1,830
        </span>
      </span>
    </div>
    <div
      class="bpk-price__trailing"
    >
      <span
        class="bpk-text bpk-text--xs"
      >
        per day
      </span>
    </div>
  </div>
</DocumentFragment>
`;
